# libsu

./: .gitattributes  CHANGELOG.md  README.md  allclasses-index.html  allclasses.html  allpackages-index.html  build.gradle  build.gradle.kts  constant-values.html  element-list  gradle.properties  gradlew  help-doc.html  id=template name=Template Module version=v1 versionCode=1 author=topjohnwu description=A short description  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  settings.gradle  settings.gradle.kts  type-search-index.js
.github/workflows/: androidci.yml
busybox/: build.gradle  build.gradle.kts
core/: build.gradle  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
core-ktx/: build.gradle.kts
docs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
docs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-2.html  index-3.html  index-4.html  index-5.html  (+4 more)
example/: build.gradle  build.gradle.kts  proguard-rules.pro
example/src/main/cpp/: CMakeLists.txt  test.cpp
io/: build.gradle  build.gradle.kts
ipc-utils/: build.gradle.kts
nio/: build.gradle.kts
rxjava2/: build.gradle
service/: .gitignore  build.gradle.kts
superuser/: build.gradle  proguard-rules.pro
(+258 files in other folders)
